--- a/2_developmental_analysis.qmd
+++ b/2_developmental_analysis.qmd
@@ -9,8 +9,8 @@ format:
 ```{r}
 library(here)
 source(here("helper","common.R"))
-d_trial <- readRDS(here("cached_intermediates","1_d_trial"))
-d_sub <- readRDS(here("cached_intermediates","1_d_sub"))
+d_trial <- readRDS(here("cached_intermediates","1_d_trial.Rds"))
+d_sub <- readRDS(here("cached_intermediates","1_d_sub.Rds"))
 ```
 
 Approaches:
