--- a/2_developmental_analysis.qmd
+++ b/2_developmental_analysis.qmd
@@ -7,7 +7,7 @@ format:
 ---
 
 ```{r}
-library(here)
+suppressPackageStartupMessages(library(here))
 source(here("helper","common.R"))
 d_trial <- readRDS(here("cached_intermediates","1_d_trial.Rds"))
 d_sub <- readRDS(here("cached_intermediates","1_d_sub.Rds"))
